# p-rag-matic

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
data_pipeline/: chunker.py  embedder.py  ingest_pubmed.py
pg-ext/: Dockerfile  docker-compose.yml
pg-ext/pg-init/: extensions.sql
src/common/: config.py
src/pgdb/: schema.py
src/pgdb/migrations/: env.py  schema.py
src/pgdb/migrations/versions/: 20260422_082846_init_medical_sports_schema.py  20260423_065719_add_hnsw_index_to_source_chunk_vec.py
src/rag/: graph.py
src/rag/core/: interfaces.py  types.py
src/rag/plugins/: noop.py
src/rag/services/: registry.py
